--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "autoprefixer": "^10.4.19",
+    "bootstrap": "^5.3.3",
     "expo": "~51.0.11",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
+    "nativewind": "^2.0.11",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-safe-area-context": "^4.10.4",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
