--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.3",
     "expo": "~51.0.11",
     "expo-status-bar": "~1.12.1",
@@ -25,6 +27,7 @@
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
+    "tailwind-rn": "^4.2.0",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
